fix scroll jump on some devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,43 +68,8 @@ html {
 }
 
 body {
-   font-size: 3.8rem;
+   font-size: clamp(16px, calc(16px + (20px - 16px) * ((100vw - 600px) / (1600 - 600))), 20px);
    line-height: 1.4;
-}
-@media (min-width: 600px) {
-   body {
-      font-size: 3.5rem;
-   }
-}
-@media (min-width: 750px) {
-   body {
-      font-size: 2.5rem;
-   }
-}
-@media (max-width: 750px) and (orientation: landscape) {
-   body {
-      font-size: 2.4rem;
-   }
-}
-@media (min-width: 751px) and (max-width: 999px) and (orientation: landscape) {
-   body {
-      font-size: 2.1rem;
-   }
-}
-@media (min-width: 1000px) {
-   body {
-      font-size: 1.6rem;
-   }
-}
-@media (min-width: 1200px) {
-   body {
-      font-size: 17px;
-   }
-}
-@media (min-width: 1600px) {
-   body {
-      font-size: 20px;
-   }
 }
 
 @media (min-width: 901px) {
